--- a/unbundl/t2/styles.css
+++ b/unbundl/t2/styles.css
@@ -122,7 +122,8 @@ a {
 footer {
     background-color: #333;
     color: #fff;
-    padding: 20px 0;
+    padding: 20px;
+    margin-top: 0; /* Set margin-top to 0 to remove the gap */
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -161,16 +162,19 @@ footer {
     background-color: #333;
     color: #fff;
     text-align: center;
-    padding: 10px 0;
+    padding: 0;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
 .copyright-footer p {
-    margin: 0;
+    margin: 30px 0 0 0;
     font-size: 0.6rem;
 }
+
+
+
 
 
 
