--- a/CN-Assignment-2/styles.css
+++ b/CN-Assignment-2/styles.css
@@ -23,7 +23,7 @@ body {
 .background-home {
     width: 100vw;
     height: 96vh;
-    background-image: url('/images/bkg-img.jpg');
+    background-image: url('images/bkg-img.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     color: white;
